<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.PrimarioFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/borda_redonda"
        android:backgroundTint="?attr/colorOnBackground"
        android:elevation="20dp"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/guia_bot_hori"
        app:layout_constraintEnd_toEndOf="@id/guia_right_verti"
        app:layout_constraintStart_toStartOf="@id/guia_left_verti"
        app:layout_constraintTop_toTopOf="@+id/guia_top_hori">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/primario_ilustrcao"
                android:src="@drawable/ilustre_primario" />

            <TextView
                android:id="@+id/subtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/string_subtitle"
                android:textSize="13sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/title_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_tensao_entrada"
            android:textColor="@color/text_blue_medium"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_vin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:autofillHints="username"
            android:background="@drawable/edittext_bg_selector"
            android:ems="10"
            android:hint="@string/hint_vin"
            android:inputType="numberDecimal"
            android:maxLength="15"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/title_tensaoSaida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_tensao_saida"
            android:textColor="@color/text_blue_medium"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_vout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:autofillHints="username"
            android:background="@drawable/edittext_bg_selector"
            android:ems="10"
            android:hint="@string/hint_vout"
            android:inputType="numberDecimal"
            android:maxLength="15"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btn_calcular"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/string_btn"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/container_resultados"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/container_resPrim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borda_redonda"
                android:backgroundTint="@color/green_mint"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tv_res_primario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green_forest"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_Secun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/borda_redonda"
                android:backgroundTint="@color/green_mint"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tv_res_secundario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green_forest"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guia_left_verti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guia_right_verti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guia_top_hori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guia_bot_hori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

</androidx.constraintlayout.widget.ConstraintLayout>