<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="5dp"
    android:paddingEnd="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UselessParent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borda_preenchimento"
            android:backgroundTint="@color/blue_cloud"
            android:orientation="vertical"
            android:padding="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp">

                <TextView
                    android:id="@+id/tipoOpcao"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_secundario"
                    android:textColor="#008A7A"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnCopiar"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

                <ImageButton
                    android:id="@+id/btnCopiar"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:backgroundTint="#0003D8C3"
                    android:contentDescription="@string/copiar_texto"
                    android:src="@drawable/copy_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tipoOpcao"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_lin1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eficiencia_estimada"
                    android:textColor="#1C4CA9"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_lin2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resultado_eficiencia"
                    android:textColor="#1C4CA9"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <!-- #2563EB Blue shapire
                    #FF03DAC5 teal_200
                    @color/blue_cloud para fundo do card-->

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>